Set net.bytebuddy.experimental to true for (experiment) Java 16 support